# lucray

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  animation.h  arena.h  bvh.h  camera.cpp  camera.h  dacrt.cpp  dacrt.h  dead_code  exr.h  exr_image.h  filesystem.cpp  filesystem.h  framebuffer.h  gltf.cpp  gltf.h  image.h  implementation.cpp  load_model.h  lucmath.h  lucmath_gen.h  lucmath_generator.cs  main copy.cpp  main.cpp  math.h  model.h  parallel_for.h  random.h  ray.h  raylib.hpp  render_ray.h  renderer.cpp  renderer.h  (+6 more)
glad/include/glad/: glad.h
glad/src/: glad.c
materials/: diffuse.h
